tests/bad/read_arity.kel
fn main() {
  val a = read_int(5)
  println(a)
}
